Source/WebKit2/NetworkProcess/NetworkConnectionToWebProcess.cpp
@@ -36,6 +36,7 @@
 #include "NetworkResourceLoaderMessages.h"
 #include "RemoteNetworkingContext.h"
 #include "SessionTracker.h"
+#include <WebCore/DNS.h>
 #include <WebCore/PingHandle.h>
 #include <WebCore/PlatformCookieJar.h>
 #include <WebCore/ResourceLoaderOptions.h>
@@ -157,6 +158,11 @@ void NetworkConnectionToWebProcess::setDefersLoading(ResourceLoadIdentifier iden
         return;
 
     loader->setDefersLoading(defers);
+}
+
+void NetworkConnectionToWebProcess::prefetchDNS(const String& hostname)
+{
+    WebCore::prefetchDNS(hostname);
 }
 
 static NetworkStorageSession& storageSession(SessionID sessionID)
