Source/WebKit2/NetworkProcess/NetworkConnectionToWebProcess.h
@@ -73,6 +73,7 @@ private:
     void scheduleResourceLoad(const NetworkResourceLoadParameters&);
     void performSynchronousLoad(const NetworkResourceLoadParameters&, PassRefPtr<Messages::NetworkConnectionToWebProcess::PerformSynchronousLoad::DelayedReply>);
     void loadPing(const NetworkResourceLoadParameters&);
+    void prefetchDNS(const String&);
 
     void removeLoadIdentifier(ResourceLoadIdentifier);
     void setDefersLoading(ResourceLoadIdentifier, bool);
