Source/WebKit2/WebProcess/InjectedBundle/API/gtk/WebKitWebExtension.cpp
@@ -27,7 +27,7 @@
 #include "WebKitPrivate.h"
 #include "WebKitWebExtensionPrivate.h"
 #include "WebKitWebPagePrivate.h"
-#include <WebCore/DNS.h>
+#include "WebProcess.h"
 #include <wtf/HashMap.h>
 #include <wtf/glib/GRefPtr.h>
 
@@ -161,7 +161,7 @@ static void webkitWebExtensionDidReceiveMessage(WebKitWebExtension*, const Strin
 {
     if (messageName == String::fromUTF8("PrefetchDNS")) {
         API::String* hostname = static_cast<API::String*>(message.get(String::fromUTF8("Hostname")));
-        WebCore::prefetchDNS(hostname->string());
+        WebProcess::singleton().prefetchDNS(hostname->string());
     } else
         ASSERT_NOT_REACHED();
 }
